fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 }
 .App {
   text-align: center;
+  overflow-x: hidden;
 }
 
 @media all and (max-width:800px) {
